bin_PROGRAMS = gizmod
gizmod_includedir = $(includedir)/gizmod
gizmod_include_HEADERS = Main.hpp GizmoDaemon.hpp GizmodEventHandlerInterface.hpp Gizmo.hpp GizmoPowermate.hpp GizmoStandard.hpp GizmoEvent.hpp GizmoEventPowermate.hpp GizmoEventCPUUsage.hpp GizmoEventStandard.hpp GizmoLinuxInputDevice.hpp GizmoLinuxInputEvent.hpp X11FocusWatcher.hpp GizmoEventWindowFocus.hpp GizmoLIRC.hpp GizmoEventLIRC.hpp GizmoEventSoundCard.hpp Alsa.hpp AlsaInterface.hpp AlsaEvent.hpp AlsaMixer.hpp AlsaMixerInterface.hpp AlsaSoundCard.hpp AlsaSoundCardInterface.hpp AlsaMixerElements.hpp Processes.hpp GizmoATIX10.hpp GizmoEventATIX10.hpp CPUUsage.hpp
gizmod_SOURCES = Main.cpp GizmoDaemon.cpp GizmodEventHandlerInterface.cpp Gizmo.cpp GizmoPowermate.cpp GizmoStandard.cpp GizmoEvent.cpp GizmoEventPowermate.cpp GizmoEventCPUUsage.cpp GizmoEventStandard.cpp GizmoLinuxInputDevice.cpp GizmoLinuxInputEvent.cpp X11FocusWatcher.cpp GizmoEventWindowFocus.cpp GizmoLIRC.cpp GizmoEventLIRC.cpp GizmoEventSoundCard.cpp Alsa.cpp AlsaInterface.cpp AlsaEvent.cpp AlsaMixer.cpp AlsaMixerInterface.cpp AlsaSoundCard.cpp AlsaSoundCardInterface.cpp AlsaMixerElements.cpp Processes.cpp  GizmoATIX10.cpp GizmoEventATIX10.cpp CPUUsage.cpp
gizmod_LDADD = ../libH/libH.la $(BOOST_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_FILESYSTEM_LIB) $(BOOST_THREAD_LIB) $(BOOST_PYTHON_LIB) ${X11_LIBS} ${ALSA_LIBS}
