lib_LTLIBRARIES=libGizmod.la
libGizmod_la_LDFLAGS=-version-info ${VERSION}
INCLUDES=-I@top_srcdir@/	
libGizmod_includedir=$(includedir)/gizmod
libGizmod_include_HEADERS=Gizmo.hpp GizmoPowermate.hpp GizmoStandard.hpp GizmoLIRC.hpp GizmoATIX10.hpp GizmoEvent.hpp GizmoEventPowermate.hpp GizmoEventCPUUsage.hpp GizmoEventStandard.hpp GizmoLinuxInputEvent.hpp GizmoEventWindowFocus.hpp GizmoEventLIRC.hpp GizmoEventSoundCard.hpp GizmoEventATIX10.hpp CPUUsage.hpp GizmoLinuxInputDevice.hpp X11FocusWatcher.cpp Alsa.hpp AlsaInterface.hpp AlsaEvent.hpp AlsaMixer.hpp AlsaMixerInterface.hpp AlsaSoundCard.hpp AlsaSoundCardInterface.hpp AlsaMixerElements.hpp Processes.hpp GizmoClient.hpp GizmoEventSoundVisualization.hpp GizmoKeyDefs.hpp 
libGizmod_la_SOURCES=     Gizmo.cpp GizmoPowermate.cpp GizmoStandard.cpp GizmoLIRC.cpp GizmoATIX10.cpp GizmoEvent.cpp GizmoEventPowermate.cpp GizmoEventCPUUsage.cpp GizmoEventStandard.cpp GizmoLinuxInputEvent.cpp GizmoEventWindowFocus.cpp GizmoEventLIRC.cpp GizmoEventSoundCard.cpp GizmoEventATIX10.cpp CPUUsage.cpp GizmoLinuxInputDevice.cpp X11FocusWatcher.cpp Alsa.cpp AlsaInterface.cpp AlsaEvent.cpp AlsaMixer.cpp AlsaMixerInterface.cpp AlsaSoundCard.cpp AlsaSoundCardInterface.cpp AlsaMixerElements.cpp Processes.cpp GizmoClient.cpp GizmoEventSoundVisualization.cpp
libGizmod_la_LIBADD=../libH/libH.la $(BOOST_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_FILESYSTEM_LIB) $(BOOST_THREAD_LIB) $(BOOST_PYTHON_LIB) ${BOOST_SERIALIZATION_LIB} ${X11_LIBS} ${ALSA_LIBS}
