cfgdir = $(sysconfdir)/gizmod/modules.d
cfg_DATA = 000-CatchAllDebug.py 199-Keyboard-Default.py 210-Powermate-Firefox.py 250-Powermate-Amarok.py 299-Powermate-Default.py 500-LIRC-Hauppauge-MythTV.py 501-LIRC-Hauppauge-mplayer.py 550-LIRC-Hauppauge-Amarok.py 599-LIRC-Hauppauge-Default.py

EXTRA_DIST = ${cfg_DATA}
