cfgdir = $(sysconfdir)/gizmod/modules.d
cfg_DATA = 000-CatchAllDebug.py 001-Powermate-Visualizer.py 150-Keyboard-Amarok.py 199-Keyboard-Default.py 210-Powermate-Firefox.py 211-Powermate-MPlayer.py 250-Powermate-Amarok.py 299-Powermate-Default.py 400-ATIX10-MythTV.py 401-ATIX10-MPlayer.py 450-ATIX10-Amarok.py 499-ATIX10-Default.py 500-LIRC-Hauppauge-MythTV.py 500-LIRC-MceUSB2-MythTV.py 501-LIRC-Hauppauge-MPlayer.py 501-LIRC-MceUSB2-MPlayer.py 550-LIRC-Hauppauge-Amarok.py 550-LIRC-MceUSB2-Amarok.py 599-LIRC-Hauppauge-Default.py 599-LIRC-MceUSB2-Default.py

EXTRA_DIST = ${cfg_DATA}
